do-helloworld-service/do-amb-helloworld-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: helloworld-service_mapping
      prefix: /
      service: helloworld-svc
      host_rewrite: helloworld-svc
  labels:
    app: helloworld-app
spec:
  selector:
    app: helloworld-app
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
