do-helloworld-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  labels:
    app: helloworld-app
spec:
  selector:
    app: helloworld-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
