do-helloworld-service/helloworld-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
spec:
  rules:  
  - host: helloworld.cloudeira.com
    http:
      paths:
      - backend:
          serviceName: helloworld-svc
          servicePort: 80
